# parallel-exercise

./: .gitignore  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yaml
parallel_example/: cgol.py
src/parallel_example/: _cgol_argparse.py  cgol.py
timing/: time_cgol.py
